--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - dev  # Change to 'main' if that's your default branch
+      - main
   workflow_dispatch:
 
 jobs:
