--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,14 @@ jobs:
           # Replace placeholder in template file to generate password-hash.js
           sed "s/{{PASSWORD_HASH}}/$HASH/g" pages/password-hash.js.template > pages/password-hash.js
           
-          echo "Password hash injected successfully"
+          # Verify the file was created
+          if [ ! -f "pages/password-hash.js" ]; then
+            echo "Error: password-hash.js was not created!"
+            exit 1
+          fi
+          
+          # Show first few characters of hash for verification (without exposing full hash)
+          echo "Password hash injected successfully (hash starts with: ${HASH:0:10}...)"
       
       - name: Setup Pages
         uses: actions/configure-pages@v4
