--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,11 +41,12 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: '.'
+          path: .
 
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
 
       - name: Log deployment URL
-        run: echo "Deployed at: ${{ steps.deployment.outputs.page_url }}"
+        run: |
+          echo "Deployed at: ${{ steps.deployment.outputs.page_url }}"
